@startuml daysave_user_rolles
title User Roles and Permissions Entity Relationship Diagram
entity "UsersProfile" {
  *id : int <<PK>>
  username : varchar
  email : varchar
  ...
}

entity "Roles" {
  *id : int <<PK>>
  name : varchar
  description : text
}

entity "UserProfile_Roles" {
  *user_id : int <<FK>>
  *role_id : int <<FK>>
}

entity "Role_Permissions" {
  *id : int <<PK>>
  role_id : int <<FK>>
  permission : varchar
}

UsersProfile ||--o{ UserProfile_Roles : has >
Roles ||--o{ UserProfile_Roles : assigned >
Roles ||--o{ Role_Permissions : grants >
@enduml

